[project]
name = "gardenai"
version = "0.1.0"
description = "Streamlit app for native garden plant recommendations."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai==1.14.1",
    "pandas==2.2.1",
    "python-dotenv==1.0.1",
    "streamlit==1.32.2",
]

[tool.uv]
package = false
constraint-dependencies = [
    "httpx==0.27.0",
]
